--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,5 @@
 title: Kari McAlpine
 logo: /assets/img/Media_Circle.png
-#description: text below image
+#description: Kari McAlpine, BSc.OT
 show_downloads: false
 theme: jekyll-theme-minimal
