--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,4 @@
 title: Kari McAlpine
 logo: /assets/img/Media_Circle.png
-#description: Kari McAlpine, BSc.OT
-show_downloads: false
+#description: Based in Kingston with options to relocate throughout eastern & central Ontario
 theme: jekyll-theme-minimal
