--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,5 @@
 title: Kari McAlpine
 logo: /assets/img/Media_Circle.png
 #description: Based in Kingston with options to relocate throughout eastern & central Ontario
+show_downloads:
 theme: jekyll-theme-minimal
