--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,5 @@
 title: Kari McAlpine
-logo: /assets/img/Media_Circle.png
-#description: Based in Kingston with options to relocate throughout eastern & central Ontario
-show_downloads:
+logo: /assets/Media_Circle.png
+#description: Based in Kingston with options to relocate in proximity to placement service needs.
+show_downloads: True
 theme: jekyll-theme-minimal
