--- a/config.yml
+++ b/config.yml
@@ -1,3 +1,3 @@
 logo: /assets/Media_Circle.png
 #description: Based in Kingston with options to relocate in proximity to placement service needs.
-theme: jekyll-theme-minimal
+theme: jekyll-theme-minimalistic
