--- a/config.yml
+++ b/config.yml
@@ -1,3 +1,4 @@
-logo: /assets/Media_Circle.png
+title: Kari McAlpine
+logo: /assets/img/Media_Circle.png
 #description: Based in Kingston with options to relocate in proximity to placement service needs.
-theme: jekyll-theme-minimalistic
+theme: jekyll-theme-minimal
