--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
 title: Kari McAlpine
 logo: /assets/img/Media_Circle.png
 #description: Based in Kingston with options to relocate in proximity to placement service needs.
-theme: jekyll-theme-minimal
+theme: jekyll-theme-minimal-mistakes
